--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">HADAWIL</a></h1>
+        <!-- <h1 class="logo me-auto"><a href="index.html">HADAWIL</a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a
+          href="index.html"
+          class="logo me-auto border border-primary-subtle rounded"
+          ><img src="assets/img/logo.png" alt="" class="img-fluid"
+        /></a>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -381,11 +385,7 @@
             >
               <div class="member d-flex align-items-start">
                 <div class="pic">
-                  <img
-                    src="assets/img/DaniHarmade.png"
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <img src="assets/img/hpd.jpg" class="img-fluid" alt="" />
                 </div>
                 <div class="member-info">
                   <h4>Hapid Ramdani</h4>
