--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <!-- <h1 class="logo me-auto"><a href="index.html">HADAWIL</a></h1> -->
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a
+        <h1 class="logo me-auto"><a href="index.html">HADAWIL</a></h1> -->
+        <!-- Uncomment below if you prefer to use an image logo
+<!--         <a
           href="index.html"
           class="logo me-auto border border-primary-subtle rounded"
           ><img src="assets/img/logo.png" alt="" class="img-fluid"
-        /></a>
+        /></a> -->
 
         <nav id="navbar" class="navbar">
           <ul>
