--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">HADAWIL</a></h1> -->
+        <h1 class="logo me-auto"><a href="index.html">HADAWIL</a></h1>
+        -->
         <!-- Uncomment below if you prefer to use an image logo
 <!--         <a
           href="index.html"
@@ -314,6 +315,18 @@
                     ></div>
                   </div>
                 </div>
+                <div class="progress">
+                  <span class="skill">Laravel <i class="val">50%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="50"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    ></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -424,7 +437,8 @@
             <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
               <div class="box">
                 <h3>Install Ulang</h3>
-                <h4><sup>IDR</sup>70.000<span>Discount 30%</span></h4>
+                <s><h5>Rp.100.000</h5></s>
+                <h4><sup>Rp.</sup>70.000<span>Discount 30%</span></h4>
                 <ul>
                   <li><i class="bx bx-check"></i>Windows 7/10/11</li>
                   <li><i class="bx bx-check"></i>Office 2021</li>
@@ -437,7 +451,7 @@
                   href="https://wa.me/6287796622516"
                   class="buy-btn"
                   target="_blank"
-                  >Get Started</a
+                  >Pesan Sekarang</a
                 >
               </div>
             </div>
@@ -449,7 +463,8 @@
             >
               <div class="box featured">
                 <h3>Install Ulang & Pembuatan Website</h3>
-                <h4><sup>IDR</sup>200.000<span>Discount 30%</span></h4>
+                <s><h5>Rp.250.000</h5></s>
+                <h4><sup>Rp.</sup>200.000<span>Discount 20%</span></h4>
                 <ul>
                   <li><i class="bx bx-check"></i> Paket Install Ulang</li>
                   <li><i class="bx bx-check"></i>Paket Website</li>
@@ -458,7 +473,7 @@
                   href="https://wa.me/6287796622516"
                   class="buy-btn"
                   target="_blank"
-                  >Get Started</a
+                  >Pesan Sekarang</a
                 >
               </div>
             </div>
@@ -470,16 +485,17 @@
             >
               <div class="box">
                 <h3>Website Landing Page</h3>
-                <h4><sup>IDR</sup>150.000<span>Discount 20%</span></h4>
+                <s><h5>Rp.200.000</h5></s>
+                <h4><sup>Rp.</sup>170.000<span>Discount 30%</span></h4>
                 <ul>
                   <li><i class="bx bx-check"></i> Website</li>
-                  <li><i class="bx bx-check"></i>Hosting Domain MY.ID</li>
+                  <li><i class="bx bx-check"></i>Hosting Domain my.id</li>
                 </ul>
                 <a
                   href="https://wa.me/6287796622516"
                   class="buy-btn"
                   target="_blank"
-                  >Get Started</a
+                  >Pesan Sekarang</a
                 >
               </div>
             </div>
