--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
+            <li><a class="nav-link scrollto" href="#skills">Skills</a></li>
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
             <li>
-              <a class="getstarted scrollto" href="#pricing">Get Started</a>
+              <a class="getstarted scrollto" href="#contact">Contact Us</a>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
